--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Highlights from Hypothes.is",
   "main": "trudeau.js",
   "scripts": {
+    "build": "browserify trudeau.js -s get_annotations -o trudeau-bundle.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
